--- a/classic/install_theme.html
+++ b/classic/install_theme.html
@@ -133,26 +133,26 @@ Mac: ~/Library/Preferences/BetterDiscord/themes</code></pre></div>make sure the 
                     <aside id="sidebar" role="navigation">
                         <div class="inner">
                             <strong class="sidebar-title">Getting Started</strong>
-                            <a href="/" class="sidebar-link">Overview</a>
+                            <a href="../classic/" class="sidebar-link">Overview</a>
                             <strong class="sidebar-title">Installation</strong>
-                            <a href="/install_win.html" class="sidebar-link">Windows</a>
-                            <a href="/install_mac.html" class="sidebar-link">Mac</a>
-                            <a href="/install_linux.html" class="sidebar-link">Linux</a>
+                            <a href="../classic/install_win.html" class="sidebar-link">Windows</a>
+                            <a href="../classic/install_mac.html" class="sidebar-link">Mac</a>
+                            <a href="../classic/install_linux.html" class="sidebar-link">Linux</a>
                             <strong class="sidebar-title">How to use</strong>
-                            <a href="/plugin_api.html" class="sidebar-link">Plugin API</a>
-                            <a href=/emotes.html class="sidebar-link">Emotes</a>
+                            <a href="../classic/plugin_api.html" class="sidebar-link">Plugin API</a>
+                            <a href=../classic/emotes.html class="sidebar-link">Emotes</a>
                             <strong class="sidebar-title">Troubleshooting</strong>
-                            <a href="/betterdiscord_troubleshoot.html" class="sidebar-link">BetterDiscord</a>
-                            <a href="/theme_troubleshoot.html" class="sidebar-link">Themes</a>
-                            <a href="/plugin_troubleshoot.html" class="sidebar-link">Plugins</a>
+                            <a href="../classic/betterdiscord_troubleshoot.html" class="sidebar-link">BetterDiscord</a>
+                            <a href="../classic/theme_troubleshoot.html" class="sidebar-link">Themes</a>
+                            <a href="../classic/plugin_troubleshoot.html" class="sidebar-link">Plugins</a>
                             <strong class="sidebar-title">Guides</strong>
-                            <a href="/install_theme.html" class="sidebar-link current">Installing Theme</a>
-                            <a href="/install_plugin.html" class="sidebar-link">Installing Plugin</a>
-                            <a href="/making_theme.html" class="sidebar-link">Making Theme</a>
-                            <a href="/making_plugin.html" class="sidebar-link">Making Plugin</a>
+                            <a href="../classic/install_theme.html" class="sidebar-link current">Installing Theme</a>
+                            <a href="../classic/install_plugin.html" class="sidebar-link">Installing Plugin</a>
+                            <a href="../classic/making_theme.html" class="sidebar-link">Making Theme</a>
+                            <a href="../classic/making_plugin.html" class="sidebar-link">Making Plugin</a>
                             <strong class="sidebar-title">Downloads</strong>
-                            <a href="/themes.html" class="sidebar-link">Themes</a>
-                            <a href="/plugins.html" class="sidebar-link">Plugins</a>
+                            <a href="../classic/themes.html" class="sidebar-link">Themes</a>
+                            <a href="../classic/plugins.html" class="sidebar-link">Plugins</a>
                         </div>
                     </aside>
                 </div>
@@ -192,26 +192,26 @@ Mac: ~/Library/Preferences/BetterDiscord/themes</code></pre></div>make sure the 
             </ul>
 
             <strong class="mobile-nav-title">Getting Started</strong>
-            <a href="/" class="mobile-nav-link">Overview</a>
+            <a href="../classic/" class="mobile-nav-link">Overview</a>
             <strong class="mobile-nav-title">Installation</strong>
-            <a href="/install_win.html" class="mobile-nav-link">Windows</a>
-            <a href="/install_mac.html" class="mobile-nav-link">Mac</a>
-            <a href="/install_linux.html" class="mobile-nav-link">Linux</a>
+            <a href="../classic/install_win.html" class="mobile-nav-link">Windows</a>
+            <a href="../classic/install_mac.html" class="mobile-nav-link">Mac</a>
+            <a href="../classic/install_linux.html" class="mobile-nav-link">Linux</a>
             <strong class="mobile-nav-title">How to use</strong>
-            <a href="/plugin_api.html" class="mobile-nav-link">Plugin API</a>
-            <a href="/emotes.html" class="mobile-nav-link">Emotes</a>
+            <a href="../classic/plugin_api.html" class="mobile-nav-link">Plugin API</a>
+            <a href="../classic/emotes.html" class="mobile-nav-link">Emotes</a>
             <strong class="mobile-nav-title">Troubleshooting</strong>
-            <a href="/betterdiscord_troubleshoot.html" class="mobile-nav-link">BetterDiscord</a>
-            <a href="/theme_troubleshoot.html" class="mobile-nav-link">Themes</a>
-            <a href="/plugin_troubleshoot.html" class="mobile-nav-link">Plugins</a>
+            <a href="../classic/betterdiscord_troubleshoot.html" class="mobile-nav-link">BetterDiscord</a>
+            <a href="../classic/theme_troubleshoot.html" class="mobile-nav-link">Themes</a>
+            <a href="../classic/plugin_troubleshoot.html" class="mobile-nav-link">Plugins</a>
             <strong class="mobile-nav-title">Guides</strong>
-            <a href="/install_theme.html" class="mobile-nav-link current">Installing Themes</a>
-            <a href="/install_plugin.html" class="mobile-nav-link">Installing Plugins</a>
-            <a href="/making_theme.html" class="mobile-nav-link">Making Theme</a>
-            <a href="/making_plugin.html" class="mobile-nav-link">Making Plugin</a>
+            <a href="../classic/install_theme.html" class="mobile-nav-link current">Installing Themes</a>
+            <a href="../classic/install_plugin.html" class="mobile-nav-link">Installing Plugins</a>
+            <a href="../classic/making_theme.html" class="mobile-nav-link">Making Theme</a>
+            <a href="../classic/making_plugin.html" class="mobile-nav-link">Making Plugin</a>
             <strong class="mobile-nav-title">Downloads</strong>
-            <a href="/themes.html" class="mobile-nav-link">Themes</a>
-            <a href="/plugins.html" class="mobile-nav-link">Plugins</a>
+            <a href="../classic/themes.html" class="mobile-nav-link">Themes</a>
+            <a href="../classic/plugins.html" class="mobile-nav-link">Plugins</a>
 
         </div>
         <div id="mobile-lang-select-wrap">
