--- a/documentation/index.html
+++ b/documentation/index.html
@@ -9,7 +9,7 @@
     <meta content="Documentation for BetterDiscord, a 3rd party software for Discordapp to optimize Discord with Plugins and Themes and Twitch Emotes with it's built-in JavaScript loader." name="description">
     <meta content="Omni Omniscient Jiiks Hammock Maple Bluescream BetterDiscord Discord Themes Plugins Theme Plugin Installation How-To" name="keywords">
     <!-- CSS -->
-    <link rel="stylesheet" href="https://betterdocs.net/classic/stylesheets/style.css">
+    <link rel="stylesheet" href="https://betterdocs.net/documentation/stylesheets/style.css">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <!-- Open Graph -->
@@ -43,8 +43,8 @@
   crossorigin="anonymous"></script>
     <script> 
     $(function(){
-      $("#import-header").load("https://betterdocs.net/classic/import/header.html");
-	  $("#import-mobile-nav").load("https://betterdocs.net/classic/import/mobile-nav.html");
+      $("#import-header").load("https://betterdocs.net/documentation/import/header.html");
+	  $("#import-mobile-nav").load("https://betterdocs.net/documentation/import/mobile-nav.html");
     });
     </script> 
     <style>
@@ -158,7 +158,7 @@
                     <aside id="sidebar" role="navigation">
                         <div class="inner">
                             <strong class="sidebar-title">Getting Started</strong>
-                            <a href="../classic/index.html" class="sidebar-link current">Overview</a>
+                            <a href="../documentation/index.html" class="sidebar-link current">Overview</a>
                             <strong class="sidebar-title">Installation</strong>
                             <a href="https://betterdocs.net/install_win.html" class="sidebar-link">Windows</a>
                             <a href="https://betterdocs.net/install_mac.html" class="sidebar-link">Mac</a>
@@ -217,7 +217,7 @@
                     </ul>
 
                     <strong class="mobile-nav-title">Getting Started</strong>
-                    <a href="../classic/index.html" class="mobile-nav-link current">Overview</a>
+                    <a href="../documentation/index.html" class="mobile-nav-link current">Overview</a>
                     <strong class="mobile-nav-title">Installation</strong>
                     <a href="https://betterdocs.net/install_win.html" class="mobile-nav-link">Windows</a>
                     <a href="https://betterdocs.net/install_mac.html" class="mobile-nav-link">Mac</a>
@@ -249,7 +249,7 @@
                 </div>
             </nav>
             <!-- Scripts -->
-            <script src="https://betterdocs.net/classic/scripts/main.js"></script>
+            <script src="https://betterdocs.net/documentation/scripts/main.js"></script>
             <script src="https://cdn.jsdelivr.net/retinajs/1.3.0/retina.min.js" async></script>
 
             <script type="text/javascript">
