--- a/themes.html
+++ b/themes.html
@@ -48,7 +48,7 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,600,700" type="text/css">
 
 <!-- CSS IMPORT FOR MAIN STYLE AND COLOR SCHEME -->
-<link rel="stylesheet" href="https://betterdocs.net/classic/stylesheets/style.css">
+<link rel="stylesheet" href="https://betterdocs.net/documentation/stylesheets/style.css">
 <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 
@@ -84,7 +84,7 @@
 </style>
 <script> 
     $(function(){
-	  $("#import-mobile-nav").load("https://betterdocs.net/classic/import/mobile-nav.html");
+	  $("#import-mobile-nav").load("https://betterdocs.net/documentation/import/mobile-nav.html");
     });
     </script>
 </head>
@@ -198,8 +198,8 @@
 </script>
               <ul id="plugin-list">
                 <li class="plugin on">
-                  <div class="plugin-screenshot"> <img src="https://i.imgur.com/25W0otB.gif" data-src="classic/images/shop-display.png" class="lazy plugin-screenshot-img" width="auto" height="auto"> <a href="https://betterdocs.net/classic/shop/themes.html" class="plugin-preview-link"><i class="fa fa-shopping-cart"></i></a> </div>
-                  <a href="https://betterdocs.net/classic/shop/themes.html" class="plugin-name">Shop</a>
+                  <div class="plugin-screenshot"> <img src="https://i.imgur.com/25W0otB.gif" data-src="documentation/images/shop-display.png" class="lazy plugin-screenshot-img" width="auto" height="auto"> <a href="https://betterdocs.net/documentation/shop/themes.html" class="plugin-preview-link"><i class="fa fa-shopping-cart"></i></a> </div>
+                  <a href="https://betterdocs.net/documentation/shop/themes.html" class="plugin-name">Shop</a>
                   <p class="plugin-desc">Pay for a custom and beautiful theme now!</p>
                   <div class="plugin-tag-list"> <a href="#Omniscient" class="plugin-tag">Omniscient</a> <a href="#Maple" class="plugin-tag">Maple</a> <a href="#Store" class="plugin-tag tag-invis">Store</a> <a href="#Money" class="plugin-tag tag-invis">Money</a> </div>
                 </li>
@@ -210,7 +210,7 @@
                   <div class="plugin-tag-list"> <a href="#Uri" class="plugin-tag">Uri</a> <a href="#Private" class="plugin-tag">Private</a> <a href="#Ponyo" class="plugin-tag">Ponyo</a> <a href="#Transparent" class="plugin-tag tag-invis">Transparent</a> <a href="#BetterDiscord" class="plugin-tag tag-invis">BetterDiscord</a> <a href="#Dark" class="plugin-tag tag-invis">Light</a> </div>
                 </li>
                 <li class="plugin on">
-                  <div class="plugin-screenshot"> <img src="https://i.imgur.com/25W0otB.gif" data-src="https://betterdocs.net/classic/images/Reborn.jpg" class="lazy plugin-screenshot-img" width="auto" height="auto"> <a href="https://betterdocs.net/themes/discordreborn.html" class="plugin-preview-link"><i class="fa fa-eye"></i></a> </div>
+                  <div class="plugin-screenshot"> <img src="https://i.imgur.com/25W0otB.gif" data-src="https://betterdocs.net/documentation/images/Reborn.jpg" class="lazy plugin-screenshot-img" width="auto" height="auto"> <a href="https://betterdocs.net/themes/discordreborn.html" class="plugin-preview-link"><i class="fa fa-eye"></i></a> </div>
                   <a href="https://betterdocs.net/themes/discordreborn.html" class="plugin-name">Discord Reborn</a>
                   <p class="plugin-desc">Beautiful theme all I have to say. </p>
                   <div class="plugin-tag-list"> <a href="#Omniscient" class="plugin-tag">Omniscient</a> <a href="#Blue" class="plugin-tag">Blue</a> <a href="#Transparent" class="plugin-tag tag-invis">Transparent</a> <a href="#Dark" class="plugin-tag tag-invis">Dark</a> <a href="#BetterDiscord" class="plugin-tag tag-invis">BetterDiscord</a> </div>
