--- a/plugins.html
+++ b/plugins.html
@@ -103,7 +103,7 @@
         <ul>
             <!-- Submenu -->
             <li class="pushy-link"><a href="/">Home</a></li>
-            <li class="pushy-link"><a href="installation.html">Installation</a></li>
+            <li class="pushy-link"><a href="/documentation/">Documentation</a></li>
             <li class="pushy-link"><a href="themes.html">Themes</a></li>
             <li class="pushy-link active-mtab"><a href="plugins.html">Plugins</a></li>
             <li class="pushy-link"><a href="https://raidforums.com">Raidforums</a></li>
@@ -125,8 +125,8 @@
               </div>
       </header>
           <div class="tab-links fadeInDown">
-        <div class="left-tabs"> <a href="installation.html">
-          <div class="tabb first-tab">Installation</div>
+          <div class="left-tabs"> <a href="/documentation/">
+          <div class="tabb first-tab">Documentation</div>
           </a> <a href="themes.html">
           <div class="tabb second-tab">Themes</div>
           </a> <a href="plugins.html">
@@ -153,7 +153,7 @@
             <div class="inner">
                   <header id="plugin-list-header">
                 <h1 id="plugin-list-title">Plugins</h1>
-                <div id="plugin-list-count" class="total-items">Total Plugins: 99</div>
+                <div id="plugin-list-count" class="total-items">Total Plugins: 110</div>
                 <input type="search" id="plugin-search-input" placeholder="Search plugins...">
               </header>
                  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
@@ -170,7 +170,7 @@
                 <h1 id="plugin-list-title" class="bd-header">
                       <div id="betterdiscord"> <span class="bd-title">Better</span>Discord <a class="article-anchor page" href="#betterdiscord" aria-hidden="true"></a></div>
                     </h1>
-                <div id="plugin-list-count">99 Plugins</div>
+                <div id="plugin-list-count">110 Plugins</div>
                 <hr>
               </header>
                  
@@ -748,7 +748,6 @@
                       <a href="#Save" class="plugin-tag">Save</a>
                       </div>
                     </li>
-<<<<<<< HEAD
                     <li class="plugin on"> <a href="https://github.com/rauenzi/BetterDiscordAddons/tree/master/Plugins/ImageToClipboard" class="plugin-name" target="_blank">ImageToClipboard</a>
                       <p class="plugin-desc">Allows you to copy images (png/jpg) directly to your system clipboard.</p>
                       <div class="plugin-tag-list">
@@ -776,6 +775,8 @@ Requires React-Devtools being installed in your chrome browser:
                       <a href="#Developer" class="plugin-tag">Developer</a>
                       <a href="#React" class="plugin-tag">React</a>
                       <a href="#Tools" class="plugin-tag">Tools</a>
+                      </div>
+                    </li>
 		     <li class="plugin on"> <a href="https://github.com/rauenzi/BetterDiscordAddons/tree/master/Plugins/ResizableCSS" class="plugin-name" target="_blank">ResizableCSS</a>
                       <p class="plugin-desc">Allows you to resize the detached CustomCSS window. Useful for development and customization.</p>
                       <div class="plugin-tag-list">
@@ -783,17 +784,89 @@ Requires React-Devtools being installed in your chrome browser:
                       <a href="#Developer" class="plugin-tag">Developer</a>
                       <a href="#Development" class="plugin-tag">Development</a>
                       <a href="#Theme" class="plugin-tag">Theme</a>
-		      <a href="#CSS" class="plugin-tag">CSS</a>
+		     		  <a href="#CSS" class="plugin-tag">CSS</a>
                       </div>
                     </li>
-		    <li class="plugin on"> <a href="https://github.com/rauenzi/BetterDiscordAddons/tree/master/Plugins/BlurNSFW" class="plugin-name" target="_blank">BlurNSFW</a>
+		    		<li class="plugin on"> <a href="https://github.com/rauenzi/BetterDiscordAddons/tree/master/Plugins/BlurNSFW" class="plugin-name" target="_blank">BlurNSFW</a>
                       <p class="plugin-desc">Blurs images in NSFW channels until you hover over it.</p>
                       <div class="plugin-tag-list">
                       <a href="#Zerebos" class="plugin-tag">Zerebos</a>
                       <a href="#NSFW" class="plugin-tag">NSFW</a>
                       <a href="#Safe" class="plugin-tag">Safe</a>
                       <a href="#Blur" class="plugin-tag">Blur</a>
-		      <a href="#Hide" class="plugin-tag">Hide</a>
+		     		  <a href="#Hide" class="plugin-tag">Hide</a>
+                      </div>
+                    </li>
+                    <li class="plugin on"> <a href="https://github.com/mwittrien/BetterDiscordAddons/blob/master/Plugins/ServerHider" class="plugin-name" target="_blank">ServerHider</a>
+                      <p class="plugin-desc">Hide selected server, open the popout to swiftly hide servers and display them again</p>
+                      <div class="plugin-tag-list">
+                      <a href="#DevilBro" class="plugin-tag">DevilBro</a>
+                      <a href="#Hide" class="plugin-tag">Hide</a>
+                      <a href="#Server" class="plugin-tag">Server</a>
+                      <a href="#Secret" class="plugin-tag">Secret</a>
+                      </div>
+                    </li>
+                    <li class="plugin on"> <a href="https://github.com/mwittrien/BetterDiscordAddons/blob/master/Plugins/EmojiStatistics" class="plugin-name" target="_blank">EmojiStatistics</a>
+                      <p class="plugin-desc">Adds several options to get more information about emojis and emojiservers.</p>
+                      <div class="plugin-tag-list">
+                      <a href="#DevilBro" class="plugin-tag">DevilBro</a>
+                      <a href="#Emoji" class="plugin-tag">Emoji</a>
+                      <a href="#Emote" class="plugin-tag">Emote</a>
+                      <a href="#Staistics" class="plugin-tag">Staistics</a>
+                      </div>
+                    </li>
+                    <li class="plugin on"> <a href="https://github.com/mwittrien/BetterDiscordAddons/blob/master/Plugins/ServerFolders" class="plugin-name" target="_blank">ServerFolders</a>
+                      <p class="plugin-desc">Adds the option to create pseudo folders to organize your server icons.</p>
+                      <div class="plugin-tag-list">
+                      <a href="#DevilBro" class="plugin-tag">DevilBro</a>
+                      <a href="#Server" class="plugin-tag">Server</a>
+                      <a href="#Folder" class="plugin-tag">Folder</a>
+                      <a href="#Organize" class="plugin-tag">Organize</a>
+                      </div>
+                    </li>
+                    <li class="plugin on"> <a href="https://github.com/mwittrien/BetterDiscordAddons/blob/master/Plugins/ReadAllNotificationsButton" class="plugin-name" target="_blank">ReadAllNotificatonsButton</a>
+                      <p class="plugin-desc">Adds a little button at the top of your serverlist that enables you to clear all mentions and message notifications at once.</p>
+                      <div class="plugin-tag-list">
+                      <a href="#DevilBro" class="plugin-tag">DevilBro</a>
+                      <a href="#Read" class="plugin-tag">Read</a>
+                      <a href="#Unread" class="plugin-tag">Unread</a>
+                      <a href="#Notifications" class="plugin-tag">Notifications</a>
+                      <a href="#mentions" class="plugin-tag">mentions</a>
+                      </div>
+                    </li>
+                    <li class="plugin on"> <a href="https://github.com/mwittrien/BetterDiscordAddons/blob/master/Plugins/EditChannels" class="plugin-name" target="_blank">EditChannels</a>
+                      <p class="plugin-desc">Adds two options to your channel context menu.</p>
+                      <div class="plugin-tag-list">
+                      <a href="#DevilBro" class="plugin-tag">DevilBro</a>
+                      <a href="#Channels" class="plugin-tag">Channels</a>
+                      <a href="#Customize" class="plugin-tag">Customize</a>
+                      <a href="#Colors" class="plugin-tag">Colors</a>
+                      </div>
+                    </li>
+                    <li class="plugin on"> <a href="https://github.com/Inve1951/BetterDiscordStuff/blob/master/plugins/defaultToEmojis.plugin.js" class="plugin-name" target="_blank">Default To Emojis</a>
+                      <p class="plugin-desc">Selects the emoji tab when you open the picker.</p>
+                      <div class="plugin-tag-list">
+                      <a href="#Square" class="plugin-tag">Square</a>
+                      <a href="#Emoji" class="plugin-tag">Emoji</a>
+                      <a href="#Emote" class="plugin-tag">Emote</a>
+                      <a href="#Default" class="plugin-tag">Default</a>
+                      </div>
+                    </li>
+                    <li class="plugin on"> <a href="https://github.com/hammy13/BDPlugins/blob/master/plugins/dateViewer" class="plugin-name" target="_blank">Date Viewer</a>
+                      <p class="plugin-desc">Implements a container on top of the member list, that features digital clock (both 12-hour and 24-hour system), current date and day of the week...</p>
+                      <div class="plugin-tag-list">
+                      <a href="#hammy" class="plugin-tag">hammy</a>
+                      <a href="#Time" class="plugin-tag">Time</a>
+                      <a href="#Date" class="plugin-tag">Date</a>
+                      <a href="#Hours" class="plugin-tag">Hours</a>
+                      </div>
+                    </li>
+                    <li class="plugin on"> <a href="https://github.com/hammy13/BDPlugins/blob/master/plugins/dateViewer" class="plugin-name" target="_blank">SendButton</a>
+                      <p class="plugin-desc">Adds a send button to discord.</p>
+                      <div class="plugin-tag-list">
+                      <a href="#Zerebos" class="plugin-tag">Zerebos</a>
+                      <a href="#Send" class="plugin-tag">Send</a>
+                      <a href="#Button" class="plugin-tag">Button</a>
                       </div>
                     </li>
               </ul>
