--- a/submit.html
+++ b/submit.html
@@ -81,7 +81,7 @@
               <ul>
                 <!-- Submenu -->
                 <li class="pushy-link"><a href="/">Home</a></li>
-                <li class="pushy-link"><a href="installation.html">Installation</a></li>
+                <li class="pushy-link"><a href="/documentation/">Documentation</a></li>
                 <li class="pushy-link"><a href="themes.html">Themes</a></li>
                 <li class="pushy-link"><a href="plugins.html">Plugins</a></li>
                 <li class="pushy-link"><a href="https://raidforums.com">Raidforums</a></li>
