--- a/store.html
+++ b/store.html
@@ -83,11 +83,11 @@
             <div class="pushy-content">
               <ul>
                 <!-- Submenu -->
-                <li class="pushy-link active-mtab"><a href="/">Home</a></li>
+                <li class="pushy-link"><a href="/">Home</a></li>
                 <li class="pushy-link"><a href="/documentation/">Documentation</a></li>
                 <li class="pushy-link"><a href="themes.html">Themes</a></li>
                 <li class="pushy-link"><a href="plugins.html">Plugins</a></li>
-                <li class="pushy-link"><a href="store.html">Store</a></li>
+                <li class="pushy-link active-mtab"><a href="store.html">Store</a></li>
                 <li class="pushy-link"><a href="submit.html">Submit</a></li>
                 <li class="pushy-link"><a href="https://paypal.me/Chaotiic">Donate</a></li>
               </ul>
@@ -117,7 +117,7 @@
       <a href="/"> <img class="animated logo-page fadeInDown" src="img/betterdocs_white.svg" alt="logo"> </a>
       <div class="tab-links fadeInDown">
         <div class="right-tabs"> <a href="store.html">
-          <div class="tabb fourth-tab">Store</div>
+          <div class="tabb fourth-tab active-tab">Store</div>
           </a> <a href="submit.html">
           <div class="tabb fifth-tab">Submit</div>
           </a> <a href="https://paypal.me/Chaotiic">
