--- a/submit.html
+++ b/submit.html
@@ -84,7 +84,7 @@
                 <li class="pushy-link"><a href="/documentation/">Documentation</a></li>
                 <li class="pushy-link"><a href="themes.html">Themes</a></li>
                 <li class="pushy-link"><a href="plugins.html">Plugins</a></li>
-                <li class="pushy-link"><a href="https://raidforums.com">Raidforums</a></li>
+                <li class="pushy-link"><a href="store.html">Store</a></li>
                 <li class="pushy-link active-mtab"><a href="submit.html">Submit</a></li>
                 <li class="pushy-link"><a href="https://paypal.me/Chaotiic">Donate</a></li>
               </ul>
@@ -113,8 +113,8 @@
       </div>
       <a href="/"> <img class="animated logo-page fadeInDown" src="img/betterdocs_white.svg" alt="logo"> </a>
       <div class="tab-links fadeInDown">
-        <div class="right-tabs"> <a href="https://raidforums.com">
-          <div class="tabb fourth-tab">Raidforums</div>
+        <div class="right-tabs"> <a href="store.html">
+          <div class="tabb fourth-tab">Store</div>
           </a> <a href="submit.html">
           <div class="tabb fifth-tab active-tab">Submit</div>
           </a> <a href="https://paypal.me/Chaotiic">
