--- a/documentation/install_theme.html
+++ b/documentation/install_theme.html
@@ -112,7 +112,7 @@ Mac: ~/Library/Preferences/BetterDiscord/themes</code></pre></div>make sure the 
 
                                     </div>
                                     <footer class="article-footer">
-                                        <a href="/install_plugin.html" class="article-footer-next" title="Installing Plugins"><span>Next</span><i class="fa fa-chevron-right"></i></a>
+                                        <a href="../documentation/install_plugin.html" class="article-footer-next" title="Installing Plugins"><span>Next</span><i class="fa fa-chevron-right"></i></a>
                                     </footer>
 
                                 </div>
