--- a/themes.html
+++ b/themes.html
@@ -166,7 +166,7 @@
             <div class="inner">
               <header id="plugin-list-header">
                 <h1 id="plugin-list-title">Themes</h1>
-                <div id="plugin-list-count" class="total-items">Total Themes: 67</div>
+                <div id="plugin-list-count" class="total-items">Total Themes: 69</div>
                 <input type="search" id="plugin-search-input" placeholder="Search themes...">
               </header>
               <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
@@ -183,7 +183,7 @@
                 <h1 id="plugin-list-title" class="bd-header">
                   <div id="betterdiscord"> <span class="bd-title">Better</span>Discord <a class="article-anchor page" href="#betterdiscord" aria-hidden="true"></a></div>
                 </h1>
-                <div id="plugin-list-count">57 Themes</div>
+                <div id="plugin-list-count">59 Themes</div>
                 <hr>
               </header>
               <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
@@ -238,6 +238,36 @@
                   <a href="https://betterdocs.net/themes/nova.html" class="plugin-name">Nova</a>
                   <p class="plugin-desc">Explore the galaxy with a chilling theme</p>
                   <div class="plugin-tag-list"> <a href="#Dinos" class="plugin-tag">Dinos</a> <a href="#Nova" class="plugin-tag">Nova</a> <a href="#Space" class="plugin-tag">Space</a> <a href="#Galaxy" class="plugin-tag">Galaxy</a> <a href="#Red" class="plugin-tag">Red</a> <a href="#Blue" class="plugin-tag">Blue</a> <a href="#Transparent" class="plugin-tag tag-invis">Transparent</a> <a href="#Dark" class="plugin-tag tag-invis">Dark</a> <a href="#BetterDiscord" class="plugin-tag tag-invis">BetterDiscord</a> </div>
+                </li>
+                <li class="plugin on">
+                  <div class="plugin-screenshot"> 
+                  <img src="https://i.imgur.com/25W0otB.gif" data-src="https://i.imgur.com/T6fv9k8.png" class="lazy plugin-screenshot-img" width="auto" height="auto"> 
+                  <a href="https://betterdocs.net/themes/strawberry.html" class="plugin-preview-link"><i class="fa fa-eye"></i></a> </div>
+                  <a href="https://betterdocs.net/themes/strawberry.html" class="plugin-name">straWberry</a>
+                  <p class="plugin-desc">straw berries?</p>
+                  <div class="plugin-tag-list"> 
+                  <a href="#Kiwiz" class="plugin-tag">Kiwiz</a> 
+                  <a href="#Strawberry" class="plugin-tag">Strawberry</a> 
+                  <a href="#Grey" class="plugin-tag">Grey</a> 
+                  <a href="#Gray" class="plugin-tag">Gray</a> 
+                  <a href="#Transparent" class="plugin-tag tag-invis">Transparent</a> 
+                  <a href="#Dark" class="plugin-tag tag-invis">Dark</a> 
+                  <a href="#BetterDiscord" class="plugin-tag tag-invis">BetterDiscord</a> </div>
+                </li>
+                <li class="plugin on">
+                  <div class="plugin-screenshot"> 
+                  <img src="https://i.imgur.com/25W0otB.gif" data-src="https://i.imgur.com/u6zK7t0.png" class="lazy plugin-screenshot-img" width="auto" height="auto"> 
+                  <a href="https://betterdocs.net/themes/kihexi.html" class="plugin-preview-link"><i class="fa fa-eye"></i></a> </div>
+                  <a href="https://betterdocs.net/themes/kihexi.html" class="plugin-name">KiHexi</a>
+                  <p class="plugin-desc">My more-ish aesthetic-ish than normal theme I guess (question mark) ?</p>
+                  <div class="plugin-tag-list"> 
+                  <a href="#Kiwiz" class="plugin-tag">Kiwiz</a> 
+                  <a href="#Strawberry" class="plugin-tag">Aesthetic</a> 
+                  <a href="#Shapes" class="plugin-tag">Shapes</a> 
+                  <a href="#Beautiful" class="plugin-tag">Beautiful</a> 
+                  <a href="#Transparent" class="plugin-tag tag-invis">Transparent</a> 
+                  <a href="#Light" class="plugin-tag tag-invis">Light</a> 
+                  <a href="#BetterDiscord" class="plugin-tag tag-invis">BetterDiscord</a> </div>
                 </li>
                 <li class="plugin on">
                   <div class="plugin-screenshot"> <img src="https://i.imgur.com/25W0otB.gif" data-src="https://imgur.com/TUZpkAh.png" class="lazy plugin-screenshot-img" width="auto" height="auto"> <a href="https://betterdocs.net/themes/beardsmaterialtheme.html" class="plugin-preview-link"><i class="fa fa-eye"></i></a> </div>
