--- a/documentation/emotes.html
+++ b/documentation/emotes.html
@@ -11,7 +11,7 @@
     <meta content="Learn how to use the BetterDiscord emotes and there modifiers! Shake,spin,flip and flap all your emotes, make them come alive! Favorite all your best emotes to have them on the tip of your fingers." name="description">
     <meta content="Omni Omniscient Jiiks Hammock Maple Bluescream BetterDiscord Discord Themes Plugins Theme Plugin Installation How-To" name="keywords">
     <!-- CSS -->
-    <link rel="stylesheet" href="/stylesheets/style.css">
+    <link rel="stylesheet" href="../documentation/stylesheets/style.css">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 
@@ -150,7 +150,7 @@
 
                                     </div>
                                     <footer class="article-footer">
-                                        <a href="/betterdiscord_troubleshoot.html" class="article-footer-next" title="BetterDiscord Troubleshoot"><span>Next</span><i class="fa fa-chevron-right"></i></a>
+                                        <a href="../documentation/betterdiscord_troubleshoot.html" class="article-footer-next" title="BetterDiscord Troubleshoot"><span>Next</span><i class="fa fa-chevron-right"></i></a>
                                     </footer>
 
                                 </div>
@@ -170,23 +170,23 @@
                     <aside id="sidebar" role="navigation">
                         <div class="inner">
                             <strong class="sidebar-title">Getting Started</strong>
-                            <a href="/" class="sidebar-link">Overview</a>
+                            <a href="/documentation/" class="sidebar-link">Overview</a>
                             <strong class="sidebar-title">Installation</strong>
-                            <a href="/install_win.html" class="sidebar-link">Windows</a>
-                            <a href="/install_mac.html" class="sidebar-link">Mac</a>
-                            <a href="/install_linux.html" class="sidebar-link">Linux</a>
+                            <a href="../documentation/install_win.html" class="sidebar-link">Windows</a>
+                            <a href="../documentation/install_mac.html" class="sidebar-link">Mac</a>
+                            <a href="/documentation/install_linux.html" class="sidebar-link">Linux</a>
                             <strong class="sidebar-title">How to use</strong>
-                            <a href="/plugin_api.html" class="sidebar-link">Plugin API</a>
+                            <a href="../documentation/plugin_api.html" class="sidebar-link">Plugin API</a>
                             <a href=/emotes.html class="sidebar-link current">Emotes</a>
                             <strong class="sidebar-title">Troubleshooting</strong>
-                            <a href="/betterdiscord_troubleshoot.html" class="sidebar-link">BetterDiscord</a>
-                            <a href="/theme_troubleshoot.html" class="sidebar-link">Themes</a>
-                            <a href="/plugin_troubleshoot.html" class="sidebar-link">Plugins</a>
+                            <a href="../documentation/betterdiscord_troubleshoot.html" class="sidebar-link">BetterDiscord</a>
+                            <a href="../documentation/theme_troubleshoot.html" class="sidebar-link">Themes</a>
+                            <a href="../documentation/plugin_troubleshoot.html" class="sidebar-link">Plugins</a>
                             <strong class="sidebar-title">Guides</strong>
-                            <a href="/install_theme.html" class="sidebar-link">Installing Theme</a>
-                            <a href="/install_plugin.html" class="sidebar-link">Installing Plugin</a>
-                            <a href="/making_theme.html" class="sidebar-link">Making Theme</a>
-                            <a href="/making_plugin.html" class="sidebar-link">Making Plugin</a>
+                            <a href="../documentation/install_theme.html" class="sidebar-link">Installing Theme</a>
+                            <a href="../documentation/install_plugin.html" class="sidebar-link">Installing Plugin</a>
+                            <a href="../documentation/making_theme.html" class="sidebar-link">Making Theme</a>
+                            <a href="../documentation/making_plugin.html" class="sidebar-link">Making Plugin</a>
                             <strong class="sidebar-title">Downloads</strong>
                             <a href="/themes.html" class="sidebar-link">Themes</a>
                             <a href="/plugins.html" class="sidebar-link">Plugins</a>
@@ -229,23 +229,23 @@
             </ul>
 
             <strong class="mobile-nav-title">Getting Started</strong>
-            <a href="/" class="mobile-nav-link">Overview</a>
+            <a href="/documentation/" class="mobile-nav-link">Overview</a>
             <strong class="mobile-nav-title">Installation</strong>
-            <a href="/install_win.html" class="mobile-nav-link">Windows</a>
-            <a href="/install_mac.html" class="mobile-nav-link">Mac</a>
-            <a href="/install_linux.html" class="mobile-nav-link">Linux</a>
+            <a href="../documentation/install_win.html" class="mobile-nav-link">Windows</a>
+            <a href="../documentation/install_mac.html" class="mobile-nav-link">Mac</a>
+            <a href="/documentation/install_linux.html" class="mobile-nav-link">Linux</a>
             <strong class="mobile-nav-title">How to use</strong>
-            <a href="/plugin_api.html" class="mobile-nav-link">Plugin API</a>
-            <a href="/emotes.html" class="mobile-nav-link current">Emotes</a>
+            <a href="../documentation/plugin_api.html" class="mobile-nav-link">Plugin API</a>
+            <a href="../documentation/emotes.html" class="mobile-nav-link current">Emotes</a>
             <strong class="mobile-nav-title">Troubleshooting</strong>
-            <a href="/betterdiscord_troubleshoot.html" class="mobile-nav-link">BetterDiscord</a>
-            <a href="/theme_troubleshoot.html" class="mobile-nav-link">Themes</a>
-            <a href="/plugin_troubleshoot.html" class="mobile-nav-link">Plugins</a>
+            <a href="../documentation/betterdiscord_troubleshoot.html" class="mobile-nav-link">BetterDiscord</a>
+            <a href="../documentation/theme_troubleshoot.html" class="mobile-nav-link">Themes</a>
+            <a href="../documentation/plugin_troubleshoot.html" class="mobile-nav-link">Plugins</a>
             <strong class="mobile-nav-title">Guides</strong>
-            <a href="/install_theme.html" class="mobile-nav-link">Installing Themes</a>
-            <a href="/install_plugin.html" class="mobile-nav-link">Installing Plugins</a>
-            <a href="/making_theme.html" class="mobile-nav-link">Making Theme</a>
-            <a href="/making_plugin.html" class="mobile-nav-link">Making Plugin</a>
+            <a href="../documentation/install_theme.html" class="mobile-nav-link">Installing Themes</a>
+            <a href="../documentation/install_plugin.html" class="mobile-nav-link">Installing Plugins</a>
+            <a href="../documentation/making_theme.html" class="mobile-nav-link">Making Theme</a>
+            <a href="../documentation/making_plugin.html" class="mobile-nav-link">Making Plugin</a>
             <strong class="mobile-nav-title">Downloads</strong>
             <a href="/themes.html" class="mobile-nav-link">Themes</a>
             <a href="/plugins.html" class="mobile-nav-link">Plugins</a>
